docs: finalize public README and harden release process
Remove public roadmap content, clean README messaging, update MIT copyright years, and document the release runbook.\n\nAlso hardens publish workflow to run on version tags/manual dispatch and supports either trusted publishing or PYPI_API_TOKEN fallback.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,9 @@ name: Publish to PyPI
 
 on:
   push:
-    branches: [main]
+    tags:
+      - "v*"
+  workflow_dispatch:
 
 jobs:
   test:
@@ -28,6 +30,15 @@ jobs:
           python-version: "3.12"
       - run: pip install build
       - run: python -m build
-      - uses: pypa/gh-action-pypi-publish@release/v1
+      - name: Publish with API token (if configured)
+        if: ${{ secrets.PYPI_API_TOKEN != '' }}
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          user: __token__
+          password: ${{ secrets.PYPI_API_TOKEN }}
+          skip-existing: true
+      - name: Publish with trusted publisher (OIDC fallback)
+        if: ${{ secrets.PYPI_API_TOKEN == '' }}
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           skip-existing: true
